@startuml

title State obrazac - stanje meča

interface IMatchState {
    + Status : MatchStatus
    + CanJoin(match) : bool
    + CanMakeMove(match) : bool
    + CanPause(match) : bool
    + CanResume(match) : bool
    + OnOpponentJoined() : MatchStatus
    + OnGameFinished() : MatchStatus
    + OnPaused() : MatchStatus
    + OnResumed() : MatchStatus
}

class WaitingForOpponentMatchState
class InProgressMatchState
class PausedMatchState
class FinishedMatchState

class MatchStateFactory {
    + GetState(status) : IMatchState
}

IMatchState <|.. WaitingForOpponentMatchState
IMatchState <|.. InProgressMatchState
IMatchState <|.. PausedMatchState
IMatchState <|.. FinishedMatchState

MatchStateFactory --> IMatchState : returns registered state

WaitingForOpponentMatchState --> InProgressMatchState : OnOpponentJoined()
InProgressMatchState --> PausedMatchState : OnPaused()
PausedMatchState --> InProgressMatchState : OnResumed()
InProgressMatchState --> FinishedMatchState : OnGameFinished()

@enduml
